// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginBlockHooks should match snapshot 1`] = `
<InnerBlocks
  template={
    Array [
      Array [
        "tribe/event-datetime",
        Object {},
      ],
      Array [
        "tribe/event-pro-recurring",
        Object {},
      ],
      Array [
        "tribe/event-pro-exclusion",
        Object {},
      ],
    ]
  }
/>
`;

exports[`PluginBlockHooks should not hook in unregistered blocks 1`] = `
<InnerBlocks
  template={
    Array [
      Array [
        "tribe/event-datetime",
        Object {},
      ],
      Array [
        "tribe/event-pro-recurring",
        Object {},
      ],
      Array [
        "tribe/event-pro-exclusion",
        Object {},
      ],
    ]
  }
/>
`;

exports[`PluginBlockHooks should only render events templates 1`] = `
<InnerBlocks
  template={
    Array [
      Array [
        "tribe/event-datetime",
        Object {},
      ],
    ]
  }
/>
`;

exports[`PluginBlockHooks should only render events-pro templates 1`] = `
<InnerBlocks
  template={
    Array [
      Array [
        "tribe/event-datetime",
        Object {},
      ],
      Array [
        "tribe/event-pro-recurring",
        Object {},
      ],
      Array [
        "tribe/event-pro-exclusion",
        Object {},
      ],
    ]
  }
/>
`;
